test/typeerrors/ex3.golden
Building file ../test/typeerrors/ex3.act
  Compiling ex3.act for release

ERROR: Error when compiling ex3 module: Type error

  |
1 |def f(x,y):
  |    ^


  |
4 |a = f(3,x=4)
  |    ^^^^^^^^
Type incompatibility between definition of and call of f (keyword argument(s) 'y' is not defined in call)

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

